compiladores/T3/tests/inputs/test_non_assoc_in_if_w.in
// nonassoc <

main: function integer () = {

if (a < b > c) // error
  return a;
}

